Handle 'visibility:collapse' for SVG shapes/images/text-decorations

SVG shapes/images/text-decoration does not handle 'visibility:collapse'
properly. It was just handled only 'visibility:hidden'.

BUG=604687

Review-Url: https://codereview.chromium.org/2042703002
Cr-Commit-Position: refs/heads/master@{#398808}

Former-commit-id: 32cb486ad01dcc6963ddec89a4d562f60f17e6d9